fix: allow all origins in CORS config to fix Vercel-Render connection